--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -2,24 +2,28 @@
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Data Intro for Librarians</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Shell Lessons for Libraries</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>09:30</td>  <td>Setup, Workshop Introduction</td></tr>
+      <tr> <td>09:45</td>  <td>Introduction to data, tidy data, and best practices for spreadsheets</td> </tr>
+      <tr> <td>11:00</td>  <td>Morning break</td> </tr>
+      <tr> <td>12:00</td>  <td>Cleaning data with OpenRefine</td></tr>
+      <tr> <td>13:00</td>  <td>Lunch break</td> </tr>
+
+      <tr> <td>14:00</td>  <td>Cleaning data with OpenRefine</td></tr>
+      <tr> <td>15:15</td>  <td>Afternoon break</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Git Intro for Librarians</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>OpenRefine for Librarians</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>09:30</td>  <td>Introduction to R for data analysis</td> </tr>
+      <tr> <td>11:00</td>  <td>Morning break</td> </tr>
+      <tr> <td>13:00</td>  <td>Lunch break</td> </tr>
+
+      <tr> <td>14:00</td>  <td>Using R for data visualization and generating reports</td></tr>
+      <tr> <td>15:15</td>  <td>Afternoon break</td> </tr>
+      <tr> <td>16:00</td>  <td>Wrap-Up</td> </tr>
+      <tr> <td>16:15</td>  <td>Post-workshop survey</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
     </table>
   </div>
